# AIApply

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: profile.yaml  sites.yaml
scripts/: setup_azure.sh
src/aiapply/: azure_client.py  config.py  matching.py  notify.py  paths.py  resume.py  run.py  store.py
src/aiapply/apply/: __init__.py  _captcha.py  _form_filler.py  answers.py  base.py  github_apply.py  greenhouse_apply.py  lever_apply.py
src/aiapply/discovery/: __init__.py  _html.py  base.py  github_careers.py  greenhouse.py  lever.py  web_search.py
tests/: test_answers.py  test_config.py  test_store.py
