[project]
name = "aiapply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alec Harrison", email = "aah1@mac.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
aiapply = "aiapply:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
